@@ -1,0 +1,23 @@
+kramdown::
+A Markdown-superset converter
+
+Language;;
+Ruby
+
+License;;
+MIT
+
+Author;;
+Thomas Leitner
+
+kramdown-asciidoc::
+A Markdown to AsciiDoc converter based on kramdown
+
+Language;;
+Ruby
+
+License;;
+MIT
+
+Author;;
+Dan Allen
